# zynq-us-rs

./: .gitignore  Cargo.toml  README.md  aarch64-unknown-none.json  build.sh  flake.nix  gdb.sh
.cargo/: config
libboard_zynq_us/: Cargo.toml
libboard_zynq_us/src/: axi_hp.rs  lib.rs  logger.rs  stdio.rs  util.rs
libboard_zynq_us/src/clocks/: mod.rs  source.rs
libboard_zynq_us/src/ddr/: mod.rs  regs.rs  spd.rs
libboard_zynq_us/src/ddr/phy/: mod.rs  regs.rs
libboard_zynq_us/src/i2c/: mod.rs  regs.rs
libboard_zynq_us/src/interrupts/: gic400.rs  mod.rs
libboard_zynq_us/src/slcr/: common.rs  crf_apb.rs  crl_apb.rs  iou_slcr.rs  mod.rs
libboard_zynq_us/src/uart/: baud_rate_gen.rs  mod.rs  regs.rs
libcortex_a53/: Cargo.toml
libcortex_a53/src/: asm.rs  cache.rs  exceptions.S  lib.rs  regs.rs
openocd/: .gdbinit  openocd.cfg  xilinx_zynqmp.cfg  zcu111.cfg
test/: Cargo.toml  build.rs  link.x
test/src/: main.rs
